src/git/snapshots/gitu__git__diff__tests__changed_line.snap
---
source: src/git/diff.rs
expression: "hunks[0].format_patch()"
---
header
@@ -1 +1 @@
-old line
+new line
