src/git/snapshots/gitu__git__diff__tests__multiple_changed_lines.snap
---
source: src/git/diff.rs
expression: "hunks[0].format_patch()"
---
header
@@ -1,3 +1,3 @@
+three
+two
 one
-two
-three
